--- a/CoreDemo/Views/Blog/BlogReadAll.cshtml
+++ b/CoreDemo/Views/Blog/BlogReadAll.cshtml
@@ -76,7 +76,8 @@
 						<div class="tech-btm">
 							<img src="~/CoreBlogTema/images/banner1.jpg" class="img-fluid" alt="">
 						</div>
-						<div class="tech-btm">
+						@await Html.PartialAsync("~/Views/NewsLetter/SubscribeMail.cshtml")
+						@* <div class="tech-btm">
 							<h4>Sign up to our newsletter</h4>
 							<p>Pellentesque dui, non felis. Maecenas male </p>
 							<form action="#" method="post">
@@ -84,7 +85,7 @@
 								<input type="submit" value="Subscribe">
 							</form>
 
-						</div>
+						</div> *@
 						<div class="tech-btm">
 							<h4>Categories</h4>
 							@await Component.InvokeAsync("CategoryList")
