--- a/CoreDemo/Views/Shared/Partial3.cshtml
+++ b/CoreDemo/Views/Shared/Partial3.cshtml
@@ -113,7 +113,7 @@
 			</div>
 			<div class="w3layouts-agile-copyrightbottom">
 				<p>
-					© @DateTime.Now.Year Asp.net Core 5.0 Proje Kampıu. All Rights Reserved | Design by
+					© @DateTime.Now.Year Asp.net Core 5.0 Proje Kampı
 					<a href="http://w3layouts.com/">W3layouts</a>
 				</p>
 
