Yazar paneli için Yeni blog ekleme sayfası hazırlandı

--- a/CoreDemo/Views/Blog/BlogByWriterList.cshtml
+++ b/CoreDemo/Views/Blog/BlogByWriterList.cshtml
@@ -32,4 +32,4 @@
     }
 
 </table>
-<a href="#" class="btn btn-primary">Yeni blog oluştur</a>
+<a href="/Blog/BlogAdd  " class="btn btn-primary">Yeni blog oluştur</a>
