--- a/CoreDemo/Views/Blog/BlogByWriterList.cshtml
+++ b/CoreDemo/Views/Blog/BlogByWriterList.cshtml
@@ -21,12 +21,12 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td>@item.BlogID</td>
+            <th>@item.BlogID</th>   
             <td>@item.BlogTitle</td>
-            <td>@item.BlogCreateDate</td>
-            <td>@item.CategoryID</td>
+            <td>@(((DateTime)item.BlogCreateDate).ToString("dd-MMM-yyyy"))</td>
+            <td>@item.Category.CategoryName</td>
             <td>@item.BlogStatus</td>
-            <td><a href="#" class="btn btn-danger">Sil</a></td>
+            <td><a href="/Blog/DeleteBlog/@item.BlogID" class="btn btn-danger">Sil</a></td>
             <td><a href="#" class="btn btn-warning">Düzenle</a></td>
         </tr>
     }
