--- a/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
@@ -27,13 +27,13 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/forms/basic_elements.html">
+            <a class="nav-link" href="/Blog/BlogByWriterList/">
                 <span class="menu-title">Bloglarım</span>
                 <i class="mdi mdi-format-list-bulleted menu-icon"></i>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/charts/chartjs.html">
+            <a class="nav-link" href="/Blog/BlogAdd/ ">
                 <span class="menu-title">YeniBlog</span>
                 <i class="mdi mdi-chart-bar menu-icon"></i>
             </a>
