--- a/CoreDemo/Views/Dasboard/Index.cshtml
+++ b/CoreDemo/Views/Dasboard/Index.cshtml
@@ -13,13 +13,7 @@
                 <i class="mdi mdi-home"></i>
             </span> Dashboard
         </h3>
-        <nav aria-label="breadcrumb">
-            <ul class="breadcrumb">
-                <li class="breadcrumb-item active" aria-current="page">
-                    <span></span>Overview <i class="mdi mdi-alert-circle-outline icon-sm text-primary align-middle"></i>
-                </li>
-            </ul>
-        </nav>
+       
     </div>
     <div class="row">
         <div class="col-md-4 stretch-card grid-margin">
@@ -29,7 +23,7 @@
                     <h4 class="font-weight-normal mb-3">
                         Toplam Blog Sayısı <i class="mdi mdi-chart-line mdi-24px float-right"></i>
                     </h4>
-                    <h2 class="mb-5">0</h2>
+                    <h2 class="mb-5">@ViewBag.v1</h2>
                 </div>
             </div>
         </div>
@@ -40,7 +34,7 @@
                     <h4 class="font-weight-normal mb-3">
                         Sizin Blog Sayınız<i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                     </h4>
-                    <h2 class="mb-5">0</h2>
+                    <h2 class="mb-5">@ViewBag.v2</h2>
                 </div>
             </div>
         </div>
@@ -51,7 +45,7 @@
                     <h4 class="font-weight-normal mb-3">
                         Son 7 Gün Blog Sayısı <i class="mdi mdi-diamond mdi-24px float-right"></i>
                     </h4>
-                    <h2 class="mb-5">0</h2>
+                    <h2 class="mb-5">@ViewBag.v3</h2>
                 </div>
             </div>
         </div>
