--- a/CoreDemo/Views/NewsLetter/SubscribeMail.cshtml
+++ b/CoreDemo/Views/NewsLetter/SubscribeMail.cshtml
@@ -2,9 +2,28 @@
 	<h4>Mail Bülteni Abone Olun</h4>
 	<p>Teknoloji,yazılım ve diğer bloglar... </p>
 	<form method="post">
-		<input type="email" placeholder="Email" required="" name="Mail">
-		<input type="submit" value="Subscribe">
+		<input type="email" id="txtmail"placeholder="Email" required="" name="Mail">
+		<input type="submit" id="btn"value="Subscribe">
 	</form>
 
 </div>
 						
+<script type="text/javascript">
+
+    $("#btn").click(function () {
+        let values = {
+            Mail: $("#txtmail").val()
+        };
+
+        $.ajax({
+            type: "post",
+            url: "/NewsLetter/SubscribeMail/",
+            data: values,
+            success: function (func) {
+                let result = jQuery.parseJSON(func);
+            }
+        });
+    });
+</script>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
