Blog revize yapıldı yazara göre işlemler gerçekleştirildi.

--- a/CoreDemo/Views/Blog/EditBlog.cshtml
+++ b/CoreDemo/Views/Blog/EditBlog.cshtml
@@ -9,7 +9,7 @@
 {
     
     @Html.Label("Blog Id")
-    @Html.TextBoxFor(x=>x.BlogID,new{ @class="form-control"})
+    @Html.TextBoxFor(x=>x.BlogID,new{ @class="form-control",disabled = "disabled"})
     <br />
     <br />
 
