--- a/CoreDemo/Views/Shared/WriterLayout.cshtml
+++ b/CoreDemo/Views/Shared/WriterLayout.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Purple Admin</title>
+    <title>Core 5.0 Yazar Paneli</title>
     <link rel="stylesheet" href="~/writer/assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/writer/assets/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="~/writer/assets/css/style.css">
@@ -47,12 +47,12 @@
                             </div>
                         </a>
                         <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
-                            <a class="dropdown-item" href="#">
-                                <i class="mdi mdi-cached mr-2 text-success"></i> Activity Log
+                            <a class="dropdown-item" href="/Writer/WriterEditProfile/">
+                                <i class="mdi mdi-cached mr-2 text-success"></i> Ayarlar
                             </a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">
-                                <i class="mdi mdi-logout mr-2 text-primary"></i> Signout
+                            <a class="dropdown-item" href="/Login/LogOut/">
+                                <i class="mdi mdi-logout mr-2 text-primary"></i> Çıkış Yap
                             </a>
                         </div>
                     </li>
