--- a/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
@@ -7,7 +7,7 @@
                     <span class="login-status online"></span>
                 </div>
                 <div class="nav-profile-text d-flex flex-column">
-                    <span class="font-weight-bold mb-2">Yazar Adı Soyadı</span>
+                    <span class="font-weight-bold mb-2">HoşGeldiniz </span>
                     <span class="text-secondary text-small">Yazılım Mühendisi</span>
                 </div>
                 <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
@@ -40,7 +40,13 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/Message/InBox/">
-                <span class="menu-title">Mesajlar</span>
+                <span class="menu-title">Gelen Mesajlar</span>
+                <i class="mdi mdi-message menu-icon"></i>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Message/SendBox/">
+                <span class="menu-title">Göderilen Mesajlar</span>
                 <i class="mdi mdi-message menu-icon"></i>
             </a>
         </li>
