--- a/CoreDemo/Views/Message/SendBox.cshtml
+++ b/CoreDemo/Views/Message/SendBox.cshtml
@@ -1,4 +1,4 @@
-﻿@using EntityLayer.Concrete
+﻿﻿@using EntityLayer.Concrete
 @model List<Message2>
 @{
     ViewData["Title"] = "SendBox";
@@ -30,5 +30,3 @@
 
 </table>
 <a href="/Message/SendMessage/" class="btn btn-primary">Yeni Mesaj oluştur</a>
-
-
