--- a/CoreDemo/Areas/Admin/Views/AdminMessage/ComposeMessage.cshtml
+++ b/CoreDemo/Areas/Admin/Views/AdminMessage/ComposeMessage.cshtml
@@ -1,11 +1,11 @@
-﻿@{
+﻿@model EntityLayer.Concrete.Message2
+@{
     ViewData["Title"] = "ComposeMessage";
     Layout = "~/Views/Shared/AdminLayout.cshtml";
 }
 
 <!DOCTYPE html>
 <html>
-
 <body>
     <div class="wrapper wrapper-content">
         <div class="row">
@@ -51,22 +51,24 @@
 
                     <div class="mail-body">
 
-                        <form method="get">
+                        <form method="post">
                             <div class="form-group row">
                                 <label class="col-sm-2 col-form-label">Alıcı:</label>
 
-                                <div class="col-sm-10"><input type="text" class="form-control" value="alex.smith@corporat.com"></div>
+                                <div class="col-sm-10"><input type="text" class="form-control" value=""/></div>
                             </div>
                             <div class="form-group row">
                                 <label class="col-sm-2 col-form-label">Konu:</label>
 
-                                <div class="col-sm-10"><input type="text" class="form-control" value=""></div>
+                                <div class="col-sm-10"><input type="text" class="form-control" name="Subject"/></div>
                             </div>
                             <div class="form-group row">
-                                <label class="col-sm-2 col-form-label">Mesajınız:</label>
+                                <label class="col-sm-2 col-form-label">Mesajınız:</label>   
 
-                                <textarea class="form-control" value="" rows="4" cols="10"></textarea>
+                                <textarea class="form-control" name="MessageDetails" rows="4" cols="10"></textarea>
                             </div>
+                            <button>Gönder</button>
+
                         </form>
 
                     </div>
@@ -74,7 +76,6 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="mail-body text-right tooltip-demo">
-                    <a href="mailbox.html" class="btn btn-sm btn-primary" data-toggle="tooltip" data-placement="top" title="Send"><i class="fa fa-reply"></i> Gönder</a>
                     <a href="mailbox.html" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Discard email"><i class="fa fa-times"></i> Vazgeç</a>
                     <a href="mailbox.html" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Move to draft folder"><i class="fa fa-pencil"></i> Taslak</a>
                 </div>
@@ -83,7 +84,6 @@
 
             </div>
         </div>
-    </div>
     </div>
 
 </body>
