--- a/CoreDemo/Views/Admin/AdminNavbarPartial.cshtml
+++ b/CoreDemo/Views/Admin/AdminNavbarPartial.cshtml
@@ -52,6 +52,9 @@
                 <a href="/Admin/Writer/Index/"><i class="fa fa-user"></i> <span class="nav-label">Yazarlar</span>  </a>
             </li>
             <li>
+                <a href="/Admin/AdminRole/Index/"><i class="fa fa-person"></i> <span class="nav-label">Roller</span>  </a>
+            </li>
+            <li>
                 <a href="metrics.html"><i class="fa fa-info"></i> <span class="nav-label">Ayarlar</span>  </a>
             </li>
             <li>
