Rol yapısı bitti gerekli erişim izinleri verildi

--- a/CoreDemo/Areas/Admin/Views/AdminRole/AddRole.cshtml
+++ b/CoreDemo/Areas/Admin/Views/AdminRole/AddRole.cshtml
@@ -13,7 +13,7 @@
         <label>Rol Başlığı</label>
         <input class="form-control" name="Name" type="text" />
     </div>
-    <div asp-validation-summary="ModeOnly">
+    <div asp-validation-summary="ModelOnly">
 
     </div>
     <button class="btn btn-info">Kaydet</button>
